--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "core-js": "^3.6.4",
+    "gotrue-js": "^0.9.25",
+    "netlify-identity-widget": "^1.5.6",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2",
