--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "animate.css": "^3.7.2",
+    "apexcharts": "^3.17.0",
     "core-js": "^3.6.4",
     "gotrue-js": "^0.9.25",
     "netlify-identity-widget": "^1.5.6",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.2",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2",
     "webpack": "^4.42.0"
